# parkings

./: docker-compose.yaml  pyproject.toml
src/: .env  admin.py  app.py  db.py  db_connect.py  main.py  registr.py  routes.py  setting.py  utils.py
src/auth/: auth.py  models.py  routers.py  schemas.py
src/auth/managers/: manager.py
src/booking/: models.py  routers.py  schemas.py  service.py
src/core/: models.py  schemas.py
src/parcking/: models.py  routers.py  service.py
src/payment/: models.py  routers.py  services.py
